# megabot

./: LICENSE  README  README.md
src/: CMakeLists.txt  CREDITS  Makefile  Makefile.wiz  cmake_install.cmake  gp2x.h  input.c  input.h  megabot  megabot.c  megabot.h  out.txt  scale.c  scale.h  sprite.h  util.c  util.h
src/base/: player.json  vibe-mil.xm
src/pack/megabot/: megabot.json
work/: beardbot.json  climb.xcf  colors.xcf  crumbot.xcf  damage.txt  gearbot.xcf  ideas.txt  ideas.xcf  levelideas.txt  megabot-title.xcf  megabot.xcf  mousebot.xcf  music.txt  stageselect.xcf  sunbot.png.u1conflict
work/experiment/: Makefile  gloss.py  megabot.py  playmusic.c
work/mouseman/: beachball.xcf
